...
            <TextView
                android:id="@+id/textUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                tools:text="mg/l" />

        </TableRow>

    </TableLayout>

    <Button
...
