...
                android:enabled="true"
                android:text="@string/close"
                android:theme="?primaryButtonStyle"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonStart"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:enabled="true"
...
